--- a/backend/backendstyle.css
+++ b/backend/backendstyle.css
@@ -5,15 +5,48 @@
 
 #vc_ui-panel-edit-element[data-vc-shortcode="pwelement"],
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_katalog"],
+#vc_ui-panel-edit-element[data-vc-shortcode="pwe_header"],
+#vc_ui-panel-edit-element[data-vc-shortcode="pwe_logotypes"],
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_media_gallery"] {
-    
 
-    .backend-area-full-width {
+    .backend-area-full-width { 
         width: 100% !important;
     }
     .backend-area-half-width {
-        min-width: 50% !important;
-        width: 50% !important;
+        width: calc(50% - 5px) !important;
+    }
+    .backend-area-one-third-width {
+        width: calc(33% - 5px) !important;
+    }
+    .backend-area-one-fourth-width {
+        min-width: calc(25% - 5px) !important;
+        width: calc(25% - 5px) !important;
+    }
+    .backend-area-one-fifth-width {
+        min-width: calc(20% - 5px) !important;
+        width: calc(20% - 5px) !important;
+    }
+    .backend-area-half-width, 
+    .backend-area-one-third-width, 
+    .backend-area-one-fourth-width,
+    .backend-area-one-fifth-width {
+        .wpb_element_label,
+        .edit_form_line {
+            width: 100% !important;
+        }
+    }
+
+    .backend-fields {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding-right: 5px !important;
+
+        .wpb_element_label,
+        .edit_form_line {
+            width: 100%;
+            margin: 0;
+        }
     }
 
     .vc_edit-form-tab {
@@ -61,6 +94,10 @@
         width: 15% !important;
     }
 
+    .backend-textarea-raw-html textarea {
+        height: 70px !important;
+    }
+
     .backend-basic-checkbox {
         padding: 7px;
         min-width: 150px !important;
@@ -91,24 +128,6 @@
 
         .edit_form_line .on-off-switch {
             float: none;
-        }
-    }
-
-
-
-
-    .media-gallery-dropdown-thumbs-width {
-        width: calc(33.33% - 5px) !important;
-        .wpb_element_label,
-        .edit_form_line {
-            width: 100% !important;
-        }
-    }
-    .media-gallery-breakpoint {
-        width: calc(50% - 5px) !important;
-        .wpb_element_label,
-        .edit_form_line {
-            width: 100% !important;
         }
     }
 }
