--- a/backend/backendstyle.css
+++ b/backend/backendstyle.css
@@ -7,7 +7,8 @@
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_katalog"],
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_header"],
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_logotypes"],
-#vc_ui-panel-edit-element[data-vc-shortcode="pwe_media_gallery"] {
+#vc_ui-panel-edit-element[data-vc-shortcode="pwe_media_gallery"],
+#vc_ui-panel-edit-element[data-vc-shortcode="pwe_display_info"] {
 
     .backend-area-full-width { 
         width: 100% !important;
@@ -95,7 +96,9 @@
     }
 
     .backend-textarea-raw-html textarea {
-        height: 70px !important;
+        height: 70px;
+        resize: vertical;
+        overflow: auto;
     }
 
     .backend-basic-checkbox {
