--- a/backend/backendstyle.css
+++ b/backend/backendstyle.css
@@ -135,4 +135,49 @@
     }
 }
 
+/* INPUT RANGE (custom element)*/
+.vc_shortcode-param .pwe-input-range input {
+    -webkit-appearance: none;
+    appearance: none;
+    cursor: pointer;
+    border-radius: 3px;
+    background: #ddd;
+    padding: 0 !important;
+} 
+
+/* CHECKBOX (custom element)*/
+.pwe-checkbox {
+    display: flex;
+    gap: 5px;
+}
+.pwe-checkbox input[type="checkbox"] {
+    appearance: none !important;
+    background-color: #fff !important;
+    margin: 0 !important;
+    font: inherit !important;
+    color: black !important;
+    width: 20px !important;
+    height: 20px !important;
+    border: 1px solid black !important;
+    border-radius: 0 !important;
+    transform: translateY(-0.075em) !important;
+    display: grid !important;
+    place-content: center !important; 
+}
+.pwe-checkbox input[type="checkbox"]:before {
+    content: "" !important;
+    width: 12px !important;
+    height: 12px !important;
+    margin: 0 !important;
+    transform: scale(0) !important;
+    transition: 120ms transform ease-in-out !important;
+    box-shadow: inset 1em 1em red !important;
+}
+.pwe-checkbox input[type="checkbox"]:checked:before {
+    transform: scale(1) !important;
+}
+.pwe-checkbox label {
+    cursor: pointer;
+}
+
 /* NEW END */
