--- a/backend/backendstyle.css
+++ b/backend/backendstyle.css
@@ -133,6 +133,7 @@
             float: none;
         }
     }
+
 }
 
 /* INPUT RANGE (custom element)*/
@@ -179,5 +180,10 @@
 .pwe-checkbox label {
     cursor: pointer;
 }
+
+
+/* .thumbnails_height_flex {
+    display: none;
+} */
 
 /* NEW END */
