--- a/backend/backendstyle.css
+++ b/backend/backendstyle.css
@@ -147,6 +147,10 @@
 } 
 
 /* CHECKBOX (custom element)*/
+.wpb_el_type_pwe_checkbox .edit_form_line:has(.pwe-checkbox) {
+    display: flex !important;
+    align-items: center !important;
+}
 .pwe-checkbox {
     display: flex;
     gap: 5px;
@@ -159,7 +163,7 @@
     color: black !important;
     width: 20px !important;
     height: 20px !important;
-    border: 1px solid black !important;
+    border: 1px solid #e1e2e8 !important;
     border-radius: 0 !important;
     transform: translateY(-0.075em) !important;
     display: grid !important;
@@ -172,7 +176,7 @@
     margin: 0 !important;
     transform: scale(0) !important;
     transition: 120ms transform ease-in-out !important;
-    box-shadow: inset 1em 1em red !important;
+    box-shadow: inset 1em 1em #2271b1 !important;
 }
 .pwe-checkbox input[type="checkbox"]:checked:before {
     transform: scale(1) !important;
