--- a/backend/backendstyle.css
+++ b/backend/backendstyle.css
@@ -8,7 +8,8 @@
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_header"],
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_logotypes"],
 #vc_ui-panel-edit-element[data-vc-shortcode="pwe_media_gallery"],
-#vc_ui-panel-edit-element[data-vc-shortcode="pwe_display_info"] {
+#vc_ui-panel-edit-element[data-vc-shortcode="pwe_display_info"],
+#vc_ui-panel-edit-element[data-vc-shortcode="pwe_profile"] {
 
     .backend-area-full-width { 
         width: 100% !important;
