--- a/includes/exhibitor-generator/assets/exhibitor-generator-style.css
+++ b/includes/exhibitor-generator/assets/exhibitor-generator-style.css
@@ -245,7 +245,6 @@
 .modal__element .inner{
     position: relative;  
     margin: 100px auto;
-    z-index: 9999;
     background-color: #fff;
     padding: 1rem;
     border: 2px solid black;
@@ -257,6 +256,11 @@
     height: auto;
     min-width: 900px;
     text-align: center;
+}
+
+.modal__element .inner :has(.spinner){
+    pointer-events: none;
+    opacity: 0.5;
 }
 
 .tabela-masowa {
@@ -325,6 +329,7 @@
     color: white;
     font-size: 30px;
     position: absolute;
+    top: 10px;
     right: 10px;
     cursor: pointer;
 }
@@ -364,4 +369,37 @@
 }
 .wyslij.btn-gold{
     margin:18px !important;
+}
+.file-size-error, .file-size-info{
+    display: none;
+}
+.info-box-sign{
+    cursor: pointer;
+    border: 2px solid red;
+    border-radius: 50%;
+    font-weight: 800;
+    padding:1px 8px;
+}
+.file-size-info{
+    text-align: left;
+    margin-top: 10px;
+    padding: 10px;
+    background: white;
+    border: 2px solid black;
+    border-radius: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    position: fixed;
+    width: 400px;
+}
+.file-size-info :is(h5, ul){
+    margin-top: 5px;
+}
+
+.file-size-info li{
+    font-size: 14px;
+    font-weight: 500;
+}
+.inner .spinner {
+    height: 0 !important;
 }
