--- a/includes/katalog-wystawcow/assets/katalog.css
+++ b/includes/katalog-wystawcow/assets/katalog.css
@@ -63,12 +63,13 @@
     flex-wrap: wrap;
     justify-content: center;
     padding-bottom: 40px;
+    gap: 18px;
+    padding: 18px;
 }
 
 .exhibitors__container-list {
     border: 2px solid black;
-    box-shadow: 9px 9px 0px -5px black;
-    margin: 1.2rem;
+    border-radius: 10px;
     display: flex;
     width: 300px;
     min-height: 150px;
@@ -129,9 +130,8 @@
     z-index: 1000;
     background-color: #fff;
     padding: 1rem;
-    box-shadow: 9px 9px 0px -5px black;
     border: 2px solid black;
-    border-radius: 0;
+    border-radius: 18px;
     max-width: 80%;
     max-height: 80%;
     overflow: auto;
@@ -197,7 +197,7 @@
     margin: 1rem 0 0 0;
     background-color: white;
     border: 2px solid black;
-    box-shadow: 3px 3px 0px -1px black;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 16px;
 
