--- a/backend/backendstyle.css
+++ b/backend/backendstyle.css
@@ -195,3 +195,9 @@
 }
 
 /* NEW END */
+
+
+
+#vc_ui-panel-edit-element[data-vc-shortcode="pwe_header"] .vc_column[data-vc-shortcode-param-name="logotypes_layout"] {
+    display: none;
+}
