--- a/includes/media-gallery/assets/media-gallery.css
+++ b/includes/media-gallery/assets/media-gallery.css
@@ -47,6 +47,7 @@ html:not(.touch) .pwe-media-gallery-image {
 .pwe-media-gallery-arrow {
     position: absolute;
     top: 50%;
+    transform: translate(0, -50%);
     font-size: 70px;
     font-weight: bolder;
     color: white;
@@ -56,7 +57,7 @@ html:not(.touch) .pwe-media-gallery-image {
 }
 .pwe-media-gallery-arrow:hover,
 .pwe-media-gallery-close:hover {
-    transform: scale(1.1);
+    color: #cccccc;
 }
 .pwe-media-gallery-left-arrow {
     left: 20px;
