--- a/includes/nav-menu/assets/style.css
+++ b/includes/nav-menu/assets/style.css
@@ -102,6 +102,7 @@ body.home .sections-container {
     transform: translateY(-10px);
     background-color: var(--accent-color);
     z-index: 10;
+    transition: .3s ease;
 }
 /* Submenu of next levels */
 .pwe-menu__submenu .pwe-menu__submenu {
@@ -111,8 +112,9 @@ body.home .sections-container {
     left: 100%;
     visibility: hidden;
     opacity: 0;
-    background-color: #004d69;
+    background-color: var(--accent-color);
     z-index: 10;
+    transition: .3s ease;
 }
 .pwe-menu__item:hover > .pwe-menu__submenu,
 .pwe-menu__submenu-item:hover > .pwe-menu__submenu {
