--- a/includes/nav-menu/assets/style.css
+++ b/includes/nav-menu/assets/style.css
@@ -1,6 +1,6 @@
 @media (min-width: 961px) {
     .pwe-header-wrapper {
-        padding-top: 70px !important;
+        padding-top: 60px !important;
     }
 }
 
@@ -9,7 +9,7 @@
     left: 0px;
     right: 0px;
     width: 100%;
-    height: 70px;
+    height: 60px;
     z-index: 99;
     display: flex;
     transition: 0.3s ease;
@@ -26,15 +26,33 @@ body.home .pwe-menu {
     padding: 0 18px;
     gap: 18px;
 }
+/* Mobile button take part */
 .pwe-menu .pwe-menu__register-btn {
-    display: none;
+    display: flex;
+    align-self: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: .3s ease;
+}
+.pwe-menu .pwe-menu__register-btn.visible {
+    opacity: 1;
+    visibility: visible;
+}
+.pwe-menu .pwe-menu__register-btn a {
+    background-color:var(--main2-color);
+    color: #fff;
+    padding: 4px 6px;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 12px;
+    text-align: center;
 }
 .pwe-menu__main-logo {
     display: flex;
-    padding: 6px 0;
+    padding: 5px 0;
 }
 .pwe-menu__main-logo a {
-    max-height: 70px;
+    max-height: 60px;
     height: 100%;
 }
 .pwe-menu__main-logo img {
@@ -42,14 +60,19 @@ body.home .pwe-menu {
     width: auto;
     object-fit: contain;
 }
-.pwe-menu__main-logo-fair {
-    margin-left: 8px;
+.pwe-menu__main-logo-ptak {
+    margin-right: 8px;
 }
 .pwe-menu__container {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
+}
+.pwe-menu__container-mobile {
+    width: 0;
+    display: flex;
+    gap: 18px;
 }
 .pwe-menu__nav {
     list-style: none;
@@ -194,15 +217,8 @@ body.home .pwe-menu {
     body.home .pwe-header-wrapper {
         padding-top: 60px !important;
     }
-    .pwe-menu {
-        height: 60px;
-    }
     body.home .pwe-menu {
         background-color: var(--accent-color);
-    }
-    .pwe-menu__right-side {
-        display: flex;
-        gap: 18px;
     }
     .pwe-menu__container {
         flex-direction: column;
@@ -220,20 +236,10 @@ body.home .pwe-menu {
         transform: translateX(-105%);
         transition: .3s;
     }
-    /* Button take part */
-    .pwe-menu .pwe-menu__register-btn {
-        display: flex;
-        align-self: center;
+    .pwe-menu__container-mobile {
+        width: auto;
     }
-    .pwe-menu .pwe-menu__register-btn a {
-        background-color:var(--main2-color);
-        color: #fff;
-        padding: 4px 6px;
-        border-radius: 5px;
-        font-weight: 700;
-        font-size: 12px;
-        text-align: center;
-    }
+    
     /* Menu nav */
     .pwe-menu__nav {
         flex-direction: column;
@@ -329,7 +335,7 @@ body.home .pwe-menu {
         width: 25px;
         background-color: white;
         display: block;
-        transition: all .3s ease-in-out;
+        transition: all .2s ease-in-out;
         cursor: pointer;
     }
     .pwe-menu .pwe-menu__burger span::after, 
@@ -341,7 +347,7 @@ body.home .pwe-menu {
         height: 3px;
         width: 25px;
         background-color: white;
-        transition: all .3s ease-in-out;
+        transition: all .2s ease-in-out;
         cursor: pointer;
     }
 
@@ -389,6 +395,9 @@ body.home .pwe-menu {
     }
 }
 @media (max-width: 450px) {
+    .pwe-menu__wrapper {
+        padding: 0 12px;
+    }
     .pwe-menu__main-logo {
         max-width: 240px;
     }
