--- a/includes/nav-menu/assets/style.css
+++ b/includes/nav-menu/assets/style.css
@@ -1,5 +1,5 @@
 @media (min-width: 961px) {
-    .pwe-header-wrapper {
+    body.home .pwe-header-wrapper {
         padding-top: 60px !important;
     }
 }
@@ -68,6 +68,7 @@ body.home .pwe-menu {
     align-items: center;
     justify-content: center;
     gap: 10px;
+    height: auto;
 }
 .pwe-menu__container-mobile {
     width: 0;
@@ -228,6 +229,7 @@ body.home .pwe-menu {
         left: 0;
         display: flex;
         flex-direction: column;
+        padding: 18px 0;
         width: 300px;
         height: 100%;
         background-color: var(--accent-color);
@@ -245,13 +247,17 @@ body.home .pwe-menu {
     /* Menu nav */
     .pwe-menu__nav {
         flex-direction: column;
-        padding: 0 18px;;
+        padding: 18px;
+        overflow: scroll;
     }
     .pwe-menu__item {
         width: 100%;
     }
     .pwe-menu__item > a {
         font-size: 16px;
+    }
+    .pwe-menu__item.has-children:has(.pwe-menu__submenu.visible) {
+        overflow: scroll;
     }
     .pwe-menu__item:has(.wpml-ls-flag) > a {
         margin-left: 0;
