--- a/pwe-style.css
+++ b/pwe-style.css
@@ -1,3 +1,19 @@
+.pwe-loader {
+    width: 40px;
+    height: 40px;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top-color: #000;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    margin-top: 36px;
+}
+
+@keyframes spin {
+    0% { transform: translate(-50%, -50%) rotate(0deg); }
+    100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
+
+
 /* CONTACT INFO */
 #contact-info p {
     margin: 0 !important;
