--- a/includes/store/assets/style.css
+++ b/includes/store/assets/style.css
@@ -2,6 +2,7 @@
     background-color: #f5f5f5 !important;
 }
 .row-parent:has(.pwe-store) {
+    min-height: 90vh;
     padding: 18px !important;
 }
 
@@ -271,8 +272,10 @@
 
 .pwe-store__fairs {
     display: none;
+    opacity: 0;
     flex-direction: column;
     gap: 18px;
+    transition: .3s ease;
 }
 .pwe-store__fairs-search {
     display: flex;
@@ -285,7 +288,8 @@
     text-transform: uppercase;
 }
 .pwe-store__fairs-search input {
-    border: 2px solid red !important;
+    border: 2px solid #6f6f6f !important;
+    border-radius: 8px;
     min-width: 300px;
     align-self: center;
 }
@@ -302,7 +306,6 @@
     cursor: pointer;
     transition: .5s all;
     border-radius: 18px;
-    opacity: 0;
 }
 .pwe-store__fairs-item::after {
     content: attr(data-tooltip);
