--- a/includes/store/assets/style.css
+++ b/includes/store/assets/style.css
@@ -1,3 +1,8 @@
+:root {
+    --gold-color: #dbb960;
+}
+
+
 .post-content:has(.pwe-store) {
     background-color: #f5f5f5 !important;
 }
@@ -5,27 +10,263 @@
     min-height: 90vh;
     padding: 18px !important;
 }
+@media (max-width: 960px) {
+    .wpb_column:has(.pwe-store) {
+        padding: 0 !important;
+    }
+}
+
 
 #pweStore {
     max-width: 1600px;
     margin: 0 auto;
 }
-#pweStore h3 {
-    text-align: center;
-    font-size: 32px !important;
-    font-weight: bold;
-    margin-top: 36px !important;
-    margin: 36px 0 !important;
-}
 #pweStore h1 {
     text-align: center;
     font-size: 32px;
     font-weight: bold;
-    margin: 36px !important;
+    margin: 0 0 18px !important;
     color: #1a1a1a;
 }
+#pweStore h3 {
+    text-align: start;
+    font-size: 32px !important;
+    font-weight: bold;
+    margin-top: 0 !important;
+}
+@media (max-width: 500px) {
+    #pweStore h1 {
+        font-size: 24px;
+    }
+    #pweStore h3 {
+        font-size: 22px !important;
+    }
+}
+
+
+.pwe-store__section {
+    display: none;
+}
+.pwe-store__section.active {
+    display: flex;
+}
+
+
+
+.pwe-store__main-section-header {
+    height: 500px;
+}
+.pwe-store__main-section-header img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 18px;
+}
+.pwe-store__main-section-text {
+    padding: 36px 0;
+}
+.pwe-store__main-section-text p {
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+    line-height: 1.3;
+    font-weight: 500;
+    font-size: 22px;
+    max-width: 700px;
+}
+@media (max-width: 960px) {
+    .pwe-store__main-section-header {
+        height: 400px;
+    }
+}
+@media (max-width: 650px) {
+    .pwe-store__main-section-header {
+        height: 300px;
+    }
+}
+@media (max-width: 500px) {
+    .pwe-store__main-section-header {
+        height: 250px;
+    }
+}
+
+.pwe-store__category-header {
+    margin-top: 18px;
+    display: none;
+    gap: 36px;
+}
+.pwe-store__category-header-arrow {
+    width: 140px;
+    height: 140px;
+    background: black;
+    aspect-ratio: 1;
+    cursor: pointer;
+    border-radius: 18px;
+}
+.pwe-store__category-header-arrow-el {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+.pwe-store__category-header-arrow-el span {
+    position: relative;
+    display: flex;
+    width: 60px;
+    height: 3px;
+    background: #FAEEB5;
+    border-radius: 0 2px 2px 0;
+    transition: .3s ease;
+}
+.pwe-store__category-header-arrow:hover span {
+    transform: translateX(-10px);
+}
+.pwe-store__category-header-arrow-el span:before {
+    position: absolute;
+    content: "";
+    width: 40px;
+    height: 3px;
+    background: #FAEEB5;
+    transform: rotate(45deg);
+    top: 14px;
+    left: -8px;
+    border-radius: 0 2px 2px 0;
+}
+.pwe-store__category-header-arrow-el span:after {
+    position: absolute;
+    content: "";
+    width: 40px;
+    height: 3px;
+    background: #FAEEB5;
+    transform: rotate(-45deg);
+    top: -13px;
+    left: -8px;
+    border-radius: 0 2px 2px 0;
+}
+.pwe-store__category-header-title {
+    width: 100%;
+    height: 140px;
+    background: black;
+    border-radius: 18px;
+}
+.pwe-store__category-header-title p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 70px;
+    color: #FAEEB5;
+    margin: 0;
+    height: 100%;
+    padding: 18px;
+    text-align: center;
+    line-height: 1.2;
+}
+@media (max-width: 1200px) {
+    .pwe-store__category-header-title p {
+        font-size: 46px;
+    }
+}
+@media (max-width: 768px) {
+    .pwe-store__category-header {
+        gap: 18px;
+    }
+    .pwe-store__category-header-arrow {
+        width: 100px;
+        height: 100px;
+    }
+    .pwe-store__category-header-title {
+        height: 100px;
+    }
+    .pwe-store__category-header-title p {
+        font-size: 38px;
+    }
+}
+@media (max-width: 500px) {
+    .pwe-store__category-header-arrow-el span {
+        width: 40px;
+    }
+    .pwe-store__category-header-arrow-el span:before {
+        width: 30px;
+        top: 10px;
+        left: -7px;
+    }
+    .pwe-store__category-header-arrow-el span:after {
+        width: 30px;
+        top: -10px;
+        left: -6px;
+    }
+    .pwe-store__category-header-title p {
+        font-size: 26px;
+    }
+}
+
+
+
+
+
+.pwe-store__sorting {
+    padding: 36px 18px;
+}
+.pwe-store__sorting-wrapper {
+    display: flex;
+    gap: 36px;
+}
+.pwe-store__sorting-text {
+    display: flex;
+    align-items: center;
+}
+.pwe-store__sorting-text p {
+    font-size: 18px;
+    font-weight: 600;
+}
+.pwe-store__sorting-items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 18px;
+}
+.pwe-store__sorting-item {
+    padding: 18px;
+    background: #fff;
+    border-radius: 14px;
+    cursor: pointer;
+    transition: .3s ease;
+}
+.pwe-store__sorting-item:not(.active):hover {
+    background: #FAEEB5;
+}
+.pwe-store__sorting-item.active {
+    background: var(--gold-color);
+}
+.pwe-store__sorting-item p {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 600;
+}
+@media (max-width: 768px) {
+    .pwe-store__sorting-wrapper {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .pwe-store__sorting-items {
+        justify-content: center;
+    }
+    .pwe-store__sorting-item {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+
+
+
+
 .pwe-store__featured-service {
     display: none;
+    margin-top: 36px;
+}
+.pwe-store__featured-service.active {
+    display: block;
 }
 .pwe-store__featured-service .pwe-store__service-name-mailing {
     display: block;
@@ -51,8 +292,8 @@
     position: relative;
     width: 100%;
     flex: 1;
-    padding-top: 18px;
     height: fit-content;
+    border-radius: 18px;
     transition: .3s ease;
 }
 .pwe-store__featured-image img {
@@ -116,8 +357,8 @@
 }
 .pwe-store__contact-button {
     background-color: white;
-    color: #dc2626 !important;
-    border: 1px solid #dc2626;
+    color: var(--gold-color) !important;
+    border: 1px solid var(--gold-color);
     padding: 8px 24px;
     border-radius: 4px;
     font-size: 14px;
@@ -126,11 +367,11 @@
     transition: 0.3s ease;
 }
 .pwe-store__contact-button:hover {
-    background-color: #dc2626;
+    background-color: var(--gold-color);
     color: white !important;
 }
 .pwe-store__buy-button {
-    background-color: #dc2626;
+    background-color: var(--gold-color);
     color: white !important;
     border: none;
     padding: 8px 24px;
@@ -139,6 +380,16 @@
     font-weight: 500;
     text-decoration: none;
     transition: 0.3s ease;
+}
+.pwe-store__sold-out .pwe-store__buy-button {
+    background: #999;
+    pointer-events: none;
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+.pwe-store__redirect-button {
+    display: flex;
+    align-items: center;
 }
 .pwe-store__buy-button:hover {
     background-color: #b91c1c;
@@ -352,4 +603,96 @@
     .pwe-store__fairs-items {
         grid-template-columns: repeat(1, 1fr);
     }
+}
+
+
+
+
+
+.pwe-store__sold-out .pwe-store__service-image {
+    position: relative;
+}
+.pwe-store__sold-out .pwe-store__featured-image:before,
+.pwe-store__sold-out .pwe-store__service-image:before {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    background: black;
+    color: white;
+    padding: 8px;
+    font-weight: 700;
+    border-radius: 30px;
+    z-index: 2;
+}
+.pwe-store__sold-out .pwe-store__featured-image:after,
+.pwe-store__sold-out .pwe-store__service-image:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #6e6e6e8f;
+    z-index: 1;
+}
+.pwe-store__sold-out .pwe-store__featured-image:after {
+    border-radius: 18px;
+}
+.pwe-store__sold-out .pwe-store__service-image:after {
+    border-radius: 8px 8px 0 0;
+}
+.pwe-store__limit .pwe-store__featured-image:before,
+.pwe-store__limit .pwe-store__service-image:before {
+    position: absolute;
+    top: 14px;
+    right: 14px;
+    background: var(--gold-color);
+    color: white;
+    padding: 8px;
+    font-weight: 700;
+    border-radius: 30px;
+    z-index: 2;
+}
+
+
+
+.pwe-store__packages-section {
+    flex-direction: column;
+    gap: 36px;
+}
+.pwe-store__packages-section-hide .pwe-store__featured-image {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
+.pwe-store__packages-section-hide .pwe-store__service-card > a {
+    flex-direction: row !important;
+}
+.pwe-store__packages-section-hide .pwe-store__service-card .pwe-store__service-image {
+    width: 50%;
+    height: initial;
+}
+.pwe-store__packages-section-hide .pwe-store__service-card .pwe-store__service-image img {
+    border-radius: 0;
+}
+.pwe-store__packages-section-hide .pwe-store__service-card .pwe-store__service-content {
+    width: 50%;
+}
+.pwe-store__packages-section-hide .pwe-store__service-card .pwe-store__btn-container {
+    padding-bottom: 0 !important;
+    margin: 0;
+    margin-top: 18px;
+}
+.pwe-store__packages-section-hide .pwe-store__service-card .pwe-store__btn-container span {
+    padding: 0 !important;
+}
+.pwe-store__services-cards-header {
+    background: black;
+    padding: 18px;
+}
+.pwe-store__services-cards-header h4 {
+    margin: 0px;
+    color: white !important;
+    font-size: 24px;
+    text-align: center;
 }
