--- a/includes/conference-cap/assets/conference-cap-style.css
+++ b/includes/conference-cap/assets/conference-cap-style.css
@@ -1,56 +1,94 @@
+.conference_patroni_logos{
+  padding: 18px;
+}
+
+.conference_patroni_logo {
+  object-fit: contain;
+  aspect-ratio: 3 / 2;
+  padding: 6px 12px;
+}
+
+.row-parent:has(#conference-cap) {
+  padding: 0 !important;
+  max-width: 100% !important;
+}
+
+.conference_cap__conf-slugs-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+}
+
 .conference_cap__info-text {
   text-align: center;
 }
 
-/* ------------------ Tabs ------------------ */
-
-.conference_cap__conf-tab-radio, .conference_cap__tab-radio {
-  display: none !important;
+.conference_cap__conf-logotypes-title {
+  text-align: center;
+  margin: 36px auto;
+  font-size: 22px !important;
 }
 
-/* .conference_cap__conf-tab-content {
-  display: none;
+.conference_cap__conf-slug-location {
+  text-align: center;
+  margin: 36px auto;
+  font-size: 24px !important;
 }
 
-.conference_cap__conf-tab-radio:checked ~ .conference_cap__conf-tabs-contents .conference_cap__conf-tab-content {
-  display: block;
+.conference_cap__conf-slug-title {
+  text-align: center;
+  margin: 36px auto;
 }
 
-.conference_cap__tab-content {
-  display: none;
+.conference_cap__conf-slugs-container .active-slug {
+  padding: 36px;
 }
 
-.conference_cap__tab-radio:checked ~ .conference_cap__tabs-contents .conference_cap__tab-content {
-  display: block;
-} */
+/* ------------------ Default Header ------------------ */
 
-.conference_cap__conf-tabs {
-  margin: 0 !important;
-}
-
-.conference_cap__tabs-labels {
+.conference_cap__conf-slug-default-header {
+  position: relative;
   display: flex;
-  flex-wrap: nowrap;
-  margin: 10px;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  background-position: center;
+  min-height: 150px;
 }
-.conference_cap__tab-label {
-  padding: 10px 20px;
-  background: #eee;
-  cursor: pointer;
-  margin: 4px;
-}
-.conference_cap__tab-radio:checked + .conference_cap__tab-label {
-  background: #ddd;
-  font-weight: bold;
-}
-.conference_cap__tab-content {
-  /* display: none; */
-  padding: 15px;
-  border-top: 1px solid #ddd;
+.conference_cap__conf-slug-default-header:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  opacity: 0.8;
+  z-index: 0;
 }
 
-.conference_cap__conf-tabs-labels {
+.conference_cap__conf-slug-default-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 18px;
+  z-index: 1;
+}
+
+.conference_cap__conf-slug-default-title {
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0;
+  color: white !important;
+  font-size: 24px !important;
+  text-shadow: 2px 2px black !important;
+}
+
+/* ------------------ Tabs Slugs ------------------ */
+
+.conference_cap__conf-slug-navigation {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -58,7 +96,7 @@
   padding: 28px 18px;
 }
 
-.conference_cap__conf-tabs-labels img {
+.conference_cap__conf-slug-img {
   border-radius: 8px;
   width: 100%;
   object-fit: cover;
@@ -68,13 +106,53 @@
   transform: scale(1);
 }
 
-.conference_cap__conf-tabs-labels img:hover {
-  transform: scale(1.05);
+.conference_cap__conf-slug-img:hover {
+  transform: scale(1.04);
+  cursor: pointer;
 }
 
-.conference_cap__conf-title {
-  text-align: center;
-  margin: 36px auto;
+.conference_cap__conf-slug-img.active-slug {
+  transform: scale(1.08);
+}
+
+.conference_cap__conf-slug, .konferencja {
+  display: none;
+}
+
+
+/* ------------------ Tabs Days ------------------ */
+
+.conference_cap__conf-slug-navigation-days {
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 10px;
+  justify-content: center;
+  border-bottom: 1px solid #eaeaea;
+  gap: 4px;
+  padding: 8px;
+}
+
+.conference_cap__conf-slug-navigation-day {
+  padding: 10px 20px;
+  line-height: 1.5;
+  background: #eee;
+  cursor: pointer;
+}
+
+.conference_cap__conf-slug-content {
+  opacity: 0;
+  transform: translateY(10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  position: absolute;
+  z-index: -1;
+}
+
+.conference_cap__conf-slug-content.active-content {
+  opacity: 1;
+  transform: translateY(0);
+  transition-delay: 0.5s;
+  z-index: 10;
+  position: relative;
 }
 
 /* ------------------ Modal ------------------ */
@@ -141,19 +219,15 @@
 
 @media (max-width: 600px) {
 
-  .row-parent:has(.conference_cap__conf-tabs) {
+  .row-parent:has(.conference_cap__conf-slug-navigation) {
       padding: 18px !important;
   }
-  
-  .conference_cap__conf-tabs-labels {
-    padding: 28px 0;
+
+  .conference_cap__conf-slug-img {
+      max-width: 140px  !important;
   }
 
-    img.conference_cap__conf-tab-image {
-      max-width: 150px  !important;
-  }
-
-  .conference_cap__tabs-labels {
+  .conference_cap__conf-slug-navigation-days {
     flex-direction: column;
     text-align: center;
   }
